# stat-scraper

./: .gitignore  README.md  StatScraper.sln  pyproject.toml
StatScraper/: GuiBase.cpp  GuiBase.h  StatScraper.cpp  StatScraper.h  StatScraper.rc  StatScraper.vcxproj  StatScraper.vcxproj.filters  imgui_stdlib.h  version.h
plugins/: StatScraper.exp  StatScraper.lib
web_docker/: docker-compose.yaml
