[tool.poetry]
name = "stat-scraper"
version = "0.1.0"
description = ""
authors = ["John Sturgeon <john.sturgeon@me.com>"]
readme = "README.md"
packages = [{include = "stat_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
